fifo concertado e funcionando.